Revert "#4: ready for production build & deploy"
This reverts commit d0af6674313a6752fca399f1f41c1f15802be497.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 3000",
-    "build": "prisma generate && next build",
+    "build": "next build",
     "start": "next start -p 3000",
     "prisma:migrate": "prisma migrate dev --name init",
     "prisma:generate": "prisma generate",
